# tradr-ugv-base

./: README
inso/: CMakeLists.txt  mainpage.dox  package.xml
inso/launch/: inso.launch
inso/src/: definitions.h  functions.cpp  functions.h  inso.cpp  string_to_matrix.cpp  string_to_matrix.h
nifti_drivers_launchers/: CMakeLists.txt  package.xml
nifti_drivers_launchers/launch/: diag.yaml  diagnostics.launch  imu.launch  laser.launch  laser_filtering_no_omnicam.launch  laser_filtering_no_omnicam_2d.launch  laser_no_omnicam.launch  laser_omnicam.launch  omnicamera.launch  robot.launch  ugv.launch  ugv_complete_with_arm.launch  ugv_complete_without_arm.launch  ugv_no_omnicam.launch
nifti_laser_assembler/: mainpage.dox
nifti_laser_assembler/launch/: nifti_laser_assembler.launch  nifti_laser_assembler_old.launch
nifti_laser_assembler/src/: nifti_laser_assembler.cpp
nifti_laser_filtering/: CMakeLists.txt  mainpage.dox  package.xml
nifti_laser_filtering/launch/: nifti_laser_filtering.launch  nifti_laser_filtering_2d.launch
nifti_laser_filtering/src/: nifti_laser_filtering.cpp
nifti_launchers/launch/: default-environment.yaml  default-robot.yaml  emilia_all_on_robot.launch  environment.yaml  eth-robot.yaml  robot.yaml  show_model.launch  user_no_map_nav_vision.launch  user_teleop_and_autonomy.launch  user_teleop_only.launch
nifti_robot_driver/: CMakeLists.txt  mainpage.dox  package.xml
nifti_robot_driver/launch/: ekf2d.launch  ekf3d.launch  robot.launch  robot2d.launch  robot3d.launch  robot_diagnostics.deprecated.launch  robot_node.launch
nifti_robot_driver/nodes/: differential_filter.py
nifti_robot_driver/src/: nifti_robot.cpp  nifti_robot.h  nifti_robot_main.cpp  nifti_robot_messages.h  nifti_robot_simulation.c
nifti_robot_driver_msgs/: CMakeLists.txt
nifti_teleop/: CMakeLists.txt  mainpage.dox  package.xml
nifti_teleop/launch/: nifti_joy.launch  nifti_ugv_teleop.launch
nifti_teleop/nodes/: nifti_mux_ctrl.py  nifti_teleop_helper.py  nifti_teleop_joy.py  nth_action.py  priority_wrapper.py
omnicamera/: CMakeLists.txt  mainpage.dox  omnicamera_plugins.xml  package.xml
omnicamera/include/omnicamera/: LadySaw.h  LadybugProcNodelet.h  LookupStitcher.h  PanolutVirtualCameraNodelet.h  panolut_virtual_camera_common.h
omnicamera/launch/: calib_lb_camera.launch  load_capture.launch  load_debayer.launch  load_lady_saw.launch  load_pano.launch  load_pano_vodom.launch  load_ptz.launch  load_ptz_proc.launch  load_rectify.launch  load_standard_views.launch  load_white_balance.launch  omnicamera_format7_mode0.launch  omnicamera_format7_mode2.launch  omnicamera_format7_mode6.launch  omnicamera_nodelet_manager.launch  omnicamera_proc.launch  omnicamera_proc_compressed.launch  omnicamera_proc_theora.launch  omnicamera_tf.launch  omnicamera_view.launch  virtual_camera_conv.launch  virtual_camera_display.launch  virtual_camera_display2.launch
omnicamera/res/: alphamask0.pgm  alphamask1.pgm  alphamask2.pgm  alphamask3.pgm  alphamask4.pgm  alphamask5.pgm  mesh.txt
omnicamera/res/camera_info/: 00b09d01009a0a69_1232x1616_c0.ini  00b09d01009a0a69_1232x1616_c0.yaml  00b09d01009a0a69_1232x1616_c1.ini  00b09d01009a0a69_1232x1616_c1.yaml  00b09d01009a0a69_1232x1616_c2.ini  00b09d01009a0a69_1232x1616_c2.yaml  00b09d01009a0a69_1232x1616_c3.ini  00b09d01009a0a69_1232x1616_c3.yaml  00b09d01009a0a69_1232x1616_c4.ini  00b09d01009a0a69_1232x1616_c4.yaml  00b09d01009a0a69_1232x1616_c5.ini  00b09d01009a0a69_1232x1616_c5.yaml  00b09d01009f01a3_1232x1616_c0.ini  00b09d01009f01a3_1232x1616_c0.yaml  00b09d01009f01a3_1232x1616_c1.ini  00b09d01009f01a3_1232x1616_c1.yaml  00b09d01009f01a3_1232x1616_c2.ini  00b09d01009f01a3_1232x1616_c2.yaml  00b09d01009f01a3_1232x1616_c3.ini  00b09d01009f01a3_1232x1616_c3.yaml  00b09d01009f01a3_1232x1616_c4.ini  00b09d01009f01a3_1232x1616_c4.yaml  00b09d01009f01a3_1232x1616_c5.ini  00b09d01009f01a3_1232x1616_c5.yaml  00b09d01009f01ae_1232x1616_c0.ini  00b09d01009f01ae_1232x1616_c0.yaml  00b09d01009f01ae_1232x1616_c1.ini  00b09d01009f01ae_1232x1616_c1.yaml  00b09d01009f01ae_1232x1616_c2.ini  00b09d01009f01ae_1232x1616_c2.yaml  00b09d01009f01ae_1232x1616_c3.ini  00b09d01009f01ae_1232x1616_c3.yaml  00b09d01009f01ae_1232x1616_c4.ini  00b09d01009f01ae_1232x1616_c4.yaml  00b09d01009f01ae_1232x1616_c5.ini  00b09d01009f01ae_1232x1616_c5.yaml  00b09d01009f01b2_1232x1616_c0.ini  00b09d01009f01b2_1232x1616_c0.yaml  00b09d01009f01b2_1232x1616_c1.ini  00b09d01009f01b2_1232x1616_c1.yaml  (+20 more)
omnicamera/src/: depth_view.cpp  imageColourCorrection_Nodelet.cpp  virtual_camera_conv.cpp  virtual_camera_display.cpp
omnicamera/src/omnicamera/: LadySaw.cpp  LadySawNodelet.cpp  LadybugPanoNodelet.cpp  LookupStitcher.cpp  PanolutVirtualCameraNodelet.cpp  auto_white_balance_nodelet.cpp  panolut_virtual_camera_common.cpp  panolut_virtual_camera_node.cpp
omnicamera_msgs/: CMakeLists.txt  package.xml
point_cloud_color/: CMakeLists.txt  package.xml  point_cloud_color_plugins.xml
point_cloud_color/eclipse/: .cproject  .project
point_cloud_color/include/point_cloud_color/: point_cloud_accessor.h
point_cloud_color/launch/: nifti_point_cloud_color.launch  nifti_scan_to_point_cloud.launch  point_cloud_color.launch  point_cloud_color_demo.launch  scan_to_point_cloud.launch  scan_to_point_cloud_demo.launch
point_cloud_color/res/rviz/: point_cloud_color_demo.vcg
point_cloud_color/src/point_cloud_color/: pcl_info.cpp  point_cloud2_color.cpp  point_cloud_accessor.cpp  point_cloud_color.cpp  scan_to_point_cloud.cpp  scan_to_point_cloud2.cpp
